--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-https-skeleton",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "a skeleton https express server",
   "author": "dan entous",
   "license": "MIT",
@@ -17,26 +17,26 @@
     }
   },
   "devDependencies": {
-    "eslint": "4.19.1",
-    "eslint-config-dan-nl": "0.1.3",
-    "ghooks": "2.0.2",
-    "nodemon": "1.17.3"
+    "eslint": "^4.19.1",
+    "eslint-config-dan-nl": "^0.1.3",
+    "ghooks": "^2.0.4",
+    "nodemon": "^1.17.5"
   },
   "dependencies": {
-    "express": "4.16.3",
-    "file-exists": "5.0.1",
-    "generic-request-options": "1.2.1",
-    "get-directory-file-list": "0.1.1",
-    "hjs": "0.0.6",
-    "http-server-request-handlers-empty-favicon": "0.1.0",
-    "http-server-request-handlers-error-logger": "0.1.6",
-    "http-server-request-handlers-not-found": "0.1.0",
-    "mongoose": "4.13.12",
-    "mongoose-helpers-setup-db": "0.1.3",
-    "morgan": "1.9.0",
-    "net-server-events-error": "0.1.0",
-    "net-server-events-listening": "0.1.1",
-    "normalize-port": "1.0.0",
-    "request-as-bluebird": "2.0.3"
+    "express": "^4.16.3",
+    "file-exists": "^5.0.1",
+    "generic-request-options": "^1.2.1",
+    "get-directory-file-list": "^0.1.1",
+    "hjs": "^0.0.6",
+    "http-server-request-handlers-empty-favicon": "^0.1.0",
+    "http-server-request-handlers-error-logger": "^0.1.6",
+    "http-server-request-handlers-not-found": "^0.1.0",
+    "mongoose": "^4.13.14",
+    "mongoose-helpers-setup-db": "^0.1.3",
+    "morgan": "^1.9.0",
+    "net-server-events-error": "^0.1.0",
+    "net-server-events-listening": "^0.1.1",
+    "normalize-port": "^1.0.0",
+    "request-as-bluebird": "^2.0.4"
   }
 }
