--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-https-skeleton",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "a skeleton https express server",
   "author": "dan entous",
   "license": "MIT",
@@ -23,6 +23,7 @@
     "nodemon": "^1.17.5"
   },
   "dependencies": {
+    "csurf": "^1.9.0",
     "express": "^4.16.3",
     "file-exists": "^5.0.1",
     "generic-request-options": "^1.2.2",
