--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "eslint": "eslint .",
     "pre-commit": "echo 'pre-commit checks ...' && npm run eslint && npm test -- --cov",
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "test": "tap test/**/*.test.js --reporter spec"
   },
   "config": {
     "ghooks": {
@@ -20,7 +21,8 @@
     "eslint": "^5.13.0",
     "eslint-config-dan-nl": "^0.1.5",
     "ghooks": "^2.0.4",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "tap": "^12.5.2"
   },
   "dependencies": {
     "csurf": "^1.9.0",
