--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "app.js",
   "private": true,
   "scripts": {
+    "build": "webpack --mode none",
     "eslint": "eslint .",
     "pre-commit": "echo 'pre-commit checks ...' && npm run eslint && npm test -- --cov",
     "start": "nodemon ./bin/www",
@@ -18,18 +19,27 @@
     }
   },
   "devDependencies": {
+    "@babel/core": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.0",
     "eslint": "^5.13.0",
     "eslint-config-dan-nl": "^0.1.5",
     "ghooks": "^2.0.4",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
     "nodemon": "^1.18.10",
-    "tap": "^12.5.2"
+    "sass-loader": "^7.1.0",
+    "tap": "^12.5.2",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3"
   },
   "dependencies": {
     "csurf": "^1.9.0",
     "express": "^4.16.4",
     "file-exists": "^5.0.1",
     "generic-request-options": "^1.2.2",
-    "get-directory-file-list": "^0.1.2",
+    "get-directory-file-list-sync": "^0.1.0",
     "hjs": "^0.0.6",
     "http-server-request-handlers-empty-favicon": "^0.1.1",
     "http-server-request-handlers-error-logger": "^0.1.7",
