--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "webpack --mode none",
     "eslint": "eslint .",
-    "pre-commit": "echo 'pre-commit checks ...' && npm run eslint && npm test -- --cov",
+    "pre-commit": "echo 'pre-commit checks ...' && npm run eslint",
     "start": "nodemon ./bin/www",
     "test": "tap test/**/*.test.js --reporter spec"
   },
@@ -19,24 +19,24 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.3.3",
-    "@babel/preset-env": "^7.3.1",
-    "babel-loader": "^8.0.5",
-    "css-loader": "^2.1.0",
-    "eslint": "^5.13.0",
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
     "eslint-config-dan-nl": "^0.1.5",
     "ghooks": "^2.0.4",
     "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
-    "nodemon": "^1.18.10",
+    "node-sass": "^4.12.0",
+    "nodemon": "^1.19.1",
     "sass-loader": "^7.1.0",
-    "tap": "^12.5.2",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.3"
+    "tap": "^14.2.0",
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2"
   },
   "dependencies": {
-    "csurf": "^1.9.0",
-    "express": "^4.16.4",
+    "csurf": "^1.10.0",
+    "express": "^4.17.1",
     "file-exists": "^5.0.1",
     "generic-request-options": "^1.2.2",
     "get-directory-file-list-sync": "^0.1.1",
