--- a/package.json
+++ b/package.json
@@ -23,15 +23,14 @@
     "@babel/preset-env": "^7.4.5",
     "babel-loader": "^8.0.6",
     "css-loader": "^2.1.1",
-    "eslint": "^5.16.0",
-    "eslint-config-dan-nl": "^0.1.5",
+    "eslint": "^4.19.1",
+    "eslint-config-dan-nl": "^0.4.1",
     "ghooks": "^2.0.4",
-    "mini-css-extract-plugin": "^0.5.0",
+    "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
     "sass-loader": "^7.1.0",
-    "tap": "^14.2.0",
-    "webpack": "^4.32.2",
+    "webpack": "^4.33.0",
     "webpack-cli": "^3.3.2"
   },
   "dependencies": {
@@ -50,6 +49,7 @@
     "net-server-events-error": "^0.1.1",
     "net-server-events-listening": "^0.1.2",
     "normalize-port": "^1.0.0",
-    "request-as-bluebird": "^2.0.4"
+    "request-as-bluebird": "^2.1.1",
+    "tap": "^12.7.0"
   }
 }
