--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build": "webpack --mode none",
     "eslint": "eslint .",
     "pre-commit": "echo 'pre-commit checks ...' && npm run eslint",
-    "start": "nodemon ./bin/www",
-    "test": "tap test/**/*.test.js --reporter spec"
+    "start": "nodemon ./bin/www"
   },
   "config": {
     "ghooks": {
@@ -19,8 +18,8 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/core": "^7.5.4",
+    "@babel/preset-env": "^7.5.4",
     "babel-loader": "^8.0.6",
     "css-loader": "^2.1.1",
     "eslint": "^4.19.1",
@@ -30,8 +29,8 @@
     "node-sass": "^4.12.0",
     "nodemon": "^1.19.1",
     "sass-loader": "^7.1.0",
-    "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.2"
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.5"
   },
   "dependencies": {
     "csurf": "^1.10.0",
@@ -49,7 +48,6 @@
     "net-server-events-error": "^0.1.1",
     "net-server-events-listening": "^0.1.2",
     "normalize-port": "^1.0.0",
-    "request-as-bluebird": "^2.1.1",
-    "tap": "^12.7.0"
+    "request-as-bluebird": "^2.1.1"
   }
 }
